# cyberpawn

./: .gitignore  CMakeLists.txt  README.md
cyberpawnCli/: CMakeLists.txt  cyberpawnCli.sln
cyberpawnCli/cyberpawnCli/: CyberpawnCli.cpp  CyberpawnCli.hpp  StringUtilities.hpp  cyberpawnCli.vcxproj  cyberpawnCli.vcxproj.filters  main.cpp
cyberpawnProfiler/: CMakeLists.txt  cyberpawnProfiler.sln
cyberpawnProfiler/cyberpawnProfiler/: cyberpawnProfiler.vcxproj  main.cpp
cyberpawnService/: cyberpawnService.sln
cyberpawnService/cyberpawn/: BetaTreeEngine.cpp  CMakeLists.txt  ChessGameFunctions.cpp  ChessPosition.cpp  cyberpawn.vcxproj  cyberpawn.vcxproj.filters
cyberpawnService/cyberpawn/include/cyberpawn/: BetaTreeEngine.hpp  ChessGame.hpp  ChessGameFunctions.hpp  ChessMove.hpp  ChessPosition.hpp  Color.hpp  Engine.hpp  Exception.hpp  PieceCode.hpp  cyberpawn.hpp
cyberpawnService/cyberpawnTest/: BetaTreeEngineTest.cpp  CMakeLists.txt  ChessGameFunctionsTest.cpp  cyberpawnTest.vcxproj
